--- a/WorkDivision/WorkDivision/WorkDivision.csproj
+++ b/WorkDivision/WorkDivision/WorkDivision.csproj
@@ -90,6 +90,12 @@
     <Compile Include="fAddNormControl.Designer.cs">
       <DependentUpon>fAddNormControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="fEditOperByDivision.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fEditOperByDivision.Designer.cs">
+      <DependentUpon>fEditOperByDivision.cs</DependentUpon>
+    </Compile>
     <Compile Include="fAddOper.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fAddNormControl.resx">
       <DependentUpon>fAddNormControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fEditOperByDivision.resx">
+      <DependentUpon>fEditOperByDivision.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fAddOper.resx">
       <DependentUpon>fAddOper.cs</DependentUpon>
