Manual input processing in form EditOperByDivision.

--- a/WorkDivision/WorkDivision/WorkDivision.csproj
+++ b/WorkDivision/WorkDivision/WorkDivision.csproj
@@ -157,6 +157,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IniFile.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fAddDivision.resx">
