--- a/WorkDivision/WorkDivision/WorkDivision.csproj
+++ b/WorkDivision/WorkDivision/WorkDivision.csproj
@@ -40,6 +40,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -54,6 +55,10 @@
     <ApplicationIcon>scissors.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1004\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
@@ -90,6 +95,12 @@
     </Compile>
     <Compile Include="fAddNormControl.Designer.cs">
       <DependentUpon>fAddNormControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fAddSigner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fAddSigner.Designer.cs">
+      <DependentUpon>fAddSigner.cs</DependentUpon>
     </Compile>
     <Compile Include="fEditOperByDivision.cs">
       <SubType>Form</SubType>
@@ -170,6 +181,9 @@
     <EmbeddedResource Include="fAddNormControl.resx">
       <DependentUpon>fAddNormControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fAddSigner.resx">
+      <DependentUpon>fAddSigner.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fEditOperByDivision.resx">
       <DependentUpon>fEditOperByDivision.cs</DependentUpon>
     </EmbeddedResource>
@@ -213,6 +227,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
